@@ -11,6 +11,8 @@ Hamcrest information: http://code.google.com/p/hamcrest/
 
 * Improved "hasCount" description.
 
+* "instanceOf" now guards against nil being passed as the expected type.
+
 
 == Version 1.2 ==
 
